--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Museos Cercanos</title>
 
     <link rel="stylesheet" type="text/css" href="estilo.css" />
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="gestorIndexedDB.js"></script>
     <script src="cargarMuseos.js"></script>
     <script src="geolocalizacion.js"></script>
